Refactoring of the sklearn notebooks

--- a/doc/tutorials/data/data_telescope.ipynb
+++ b/doc/tutorials/data/data_telescope.ipynb
@@ -5,85 +5,31 @@
    "id": "cb5caa09-76ee-43d5-b999-b185b85ff046",
    "metadata": {},
    "source": [
-    "Let's load data simulating registration of high energy gamma particles in an atmospheric Cherenkov telescope. <a href=\"https://archive.ics.uci.edu/dataset/159/magic+gamma+telescope\" target=\"_blank\" rel=\"noopener\">Follow this link</a> to get details about this dataset.\n",
+    "# MAGIC Gamma Telescope\n",
     "\n",
-    "To execute queries and upload data to Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "In this notebook, we will load data simulating the registration of high-energy gamma particles in an atmospheric Cherenkov telescope. <a href=\"https://archive.ics.uci.edu/dataset/159/magic+gamma+telescope\" target=\"_blank\" rel=\"noopener\">Follow this link</a> to get details about this dataset.\n",
     "\n",
-    "Prior to using this notebook one needs to [create the database schema](../setup_db.ipynb)."
+    "To execute queries and upload data to the Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "### Access configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "082ac10d-1e98-4513-a52b-e3c74760c5ee",
+   "execution_count": null,
+   "id": "f595cc77-885c-49ca-8385-b66a725fbdef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "from dataclasses import dataclass\n",
-    "\n",
-    "@dataclass\n",
-    "class SandboxConfig:\n",
-    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "    HOST_PORT = \"8888\"\n",
-    "\n",
-    "    @property\n",
-    "    def EXTERNAL_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
-    "\n",
-    "    USER = \"sys\"\n",
-    "    PASSWORD = \"exasol\"\n",
-    "    BUCKETFS_PORT = \"6666\"\n",
-    "    BUCKETFS_USER = \"w\"\n",
-    "    BUCKETFS_PASSWORD = \"write\"\n",
-    "    BUCKETFS_USE_HTTPS = False\n",
-    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "    BUCKETFS_BUCKET = \"default\"\n",
-    "\n",
-    "    @property\n",
-    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_URL_PREFIX(self):\n",
-    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_PATH(self):\n",
-    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
-    "\n",
-    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "    UDF_RELEASE= \"20190116\"\n",
-    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "    SCHEMA = \"IDA\"\n",
-    "\n",
-    "    @property\n",
-    "    def SCRIPT_LANGUAGES(self):\n",
-    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
-    "\n",
-    "    @property\n",
-    "    def connection_params(self):\n",
-    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
-    "\n",
-    "    @property\n",
-    "    def params(self):\n",
-    "        return {\n",
-    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
-    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
-    "            \"schema\": self.SCHEMA,\n",
-    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
-    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
-    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
-    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
-    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
-    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
-    "        }\n",
-    "\n",
-    "conf = SandboxConfig()"
+    "%run ../access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
    ]
   },
   {
@@ -91,37 +37,18 @@
    "id": "42e4f723-f2d2-4841-8dbf-6df3bde54a64",
    "metadata": {},
    "source": [
-    "First we will load the data into pandas DataFrame.\n",
+    "## Download data\n",
+    "\n",
+    "First, we will load the data into pandas DataFrame.\n",
     "We will name the column as per their description (see Additional Variable Information section)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cab1e6a9-b640-419b-bc8e-b4379a43666d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading the data took: 1.61s\n",
-      "    fLength    fWidth   fSize   fConc  fConc1     fAsym  fM3Long  fM3Trans  \\\n",
-      "0   31.6036   11.7235  2.5185  0.5303  0.3773   26.2722  23.8238   -9.9574   \n",
-      "1  162.0520  136.0310  4.0612  0.0374  0.0187  116.7410 -64.8580  -45.2160   \n",
-      "2   23.8172    9.5728  2.3385  0.6147  0.3922   27.2107  -6.4633   -7.1513   \n",
-      "3   75.1362   30.9205  3.1611  0.3168  0.1832   -5.5277  28.5525   21.8393   \n",
-      "4   51.6240   21.1502  2.9085  0.2420  0.1340   50.8761  43.1887    9.8145   \n",
-      "\n",
-      "    fAlpha    fDist class  \n",
-      "0   6.3609  205.261     g  \n",
-      "1  76.9600  256.788     g  \n",
-      "2  10.4490  116.737     g  \n",
-      "3   4.6480  356.462     g  \n",
-      "4   3.6130  238.098     g  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from urllib.request import urlopen\n",
     "import tempfile\n",
@@ -149,14 +76,14 @@
     "column_names = [\n",
     "    'fLength',   # major axis of ellipse [mm]\n",
     "    'fWidth',    # minor axis of ellipse [mm] \n",
-    "    'fSize',     # 10-log of sum of content of all pixels [in #phot]\n",
-    "    'fConc',     # ratio of sum of two highest pixels over fSize  [ratio]\n",
+    "    'fSize',     # 10-log of the sum of the content of all pixels [in #phot]\n",
+    "    'fConc',     # ratio of the sum of two highest pixels over fSize  [ratio]\n",
     "    'fConc1',    # ratio of highest pixel over fSize  [ratio]\n",
-    "    'fAsym',     # distance from highest pixel to center, projected onto major axis [mm]\n",
-    "    'fM3Long',   # 3rd root of third moment along major axis  [mm] \n",
-    "    'fM3Trans',  # 3rd root of third moment along minor axis  [mm]\n",
+    "    'fAsym',     # distance from the highest pixel to center, projected onto major axis [mm]\n",
+    "    'fM3Long',   # 3rd root of the third moment along major axis  [mm] \n",
+    "    'fM3Trans',  # 3rd root of the third moment along minor axis  [mm]\n",
     "    'fAlpha',    # angle of major axis with vector to origin [deg]\n",
-    "    'fDist',     # distance from origin to center of ellipse [mm]\n",
+    "    'fDist',     # distance from the origin to the center of ellipse [mm]\n",
     "    'class'      # g,h - gamma (signal), hadron (background)\n",
     "]\n",
     "df.columns = column_names\n",
@@ -169,25 +96,17 @@
    "id": "972b6554-2b2e-4053-bea5-b69196218bfb",
    "metadata": {},
    "source": [
+    "## Upload data into DB\n",
+    "\n",
     "Let's split data randomly into train and test sets. We will then create two tables - TELESCOPE_TRAIN and TELESCOPE_TEST - and load the datasets into these tables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9726bbfb-7d4b-4dbf-97f6-2c70260c1bfc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imported 15215 rows into TRAIN.\n",
-      "Imported 3804 rows into TEST.\n",
-      "Importing the data took: 529.66ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "import pyexasol\n",
@@ -195,24 +114,27 @@
     "# Split the data into train and test sets\n",
     "df_train, df_test = train_test_split(df, test_size=0.2)\n",
     "\n",
+    "train_table = 'TELESCOPE_TRAIN'\n",
+    "test_table = 'TELESCOPE_TEST'\n",
     "column_desc = [f'{c} {(\"DECIMAL(18,4)\" if c.startswith(\"f\") else \"CHAR(1)\")}' for c in column_names]\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "# Create Exasol connection\n",
-    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
+    "# Create an Exasol connection\n",
+    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
+    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
     "\n",
     "    # Create tables\n",
-    "    sql = f'CREATE OR REPLACE TABLE {{schema!i}}.TELESCOPE_TRAIN({\", \".join(column_desc)})'\n",
-    "    conn.execute(query=sql, query_params=conf.params)\n",
-    "    sql = 'CREATE OR REPLACE TABLE {schema!i}.TELESCOPE_TEST LIKE {schema!i}.TELESCOPE_TRAIN'\n",
-    "    conn.execute(query=sql, query_params=conf.params)\n",
+    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.SCHEMA}\".\"{train_table}\"({\", \".join(column_desc)})'\n",
+    "    conn.execute(query=sql)\n",
+    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.SCHEMA}\".\"{test_table}\" LIKE \"{sb_config.SCHEMA}\".\"{train_table}\"'\n",
+    "    conn.execute(query=sql)\n",
     "\n",
     "    # Import data into Exasol\n",
-    "    conn.import_from_pandas(df_train, (conf.SCHEMA, \"TELESCOPE_TRAIN\"))\n",
-    "    print(f\"Imported {conn.last_statement().rowcount()} rows into TRAIN.\")\n",
-    "    conn.import_from_pandas(df_test, (conf.SCHEMA, \"TELESCOPE_TEST\"))\n",
-    "    print(f\"Imported {conn.last_statement().rowcount()} rows into TEST.\")\n",
+    "    conn.import_from_pandas(df_train, (sb_config.SCHEMA, train_table))\n",
+    "    print(f\"Imported {conn.last_statement().rowcount()} rows into {train_table}.\")\n",
+    "    conn.import_from_pandas(df_test, (sb_config.SCHEMA, test_table))\n",
+    "    print(f\"Imported {conn.last_statement().rowcount()} rows into {test_table}.\")\n",
     "\n",
     "print(f\"Importing the data took: {stopwatch}\")"
    ]
