--- a/doc/tutorials/sklearn/sklearn_predict_udf.ipynb
+++ b/doc/tutorials/sklearn/sklearn_predict_udf.ipynb
@@ -5,101 +5,47 @@
    "id": "44e31a8e-3da8-416f-9fc5-13d1c23664c1",
    "metadata": {},
    "source": [
-    "In this notebook we are going to create a universal UDF SET script that will use a trained scikit-learn model for making a prediction. In order to use this script one has to create and train a scikit-learn model or a pipeline and upload its pickle file into the BucketFS. The list of features supplied to the UDF should match those used in model training and/or pre-processing. The script emits the prediction labels. The output of the script can be multi-dimensional. It works similarly in regression and classification scenarios.\n",
+    "# Generic Prediction UDF\n",
     "\n",
-    "To communicate with Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "In this notebook, we are going to create a universal UDF SET script that will use a trained scikit-learn model for making a prediction. In order to use this script one has to create and train a scikit-learn model or a pipeline and upload its pickle file into the BucketFS. The list of features supplied to the UDF should match those used in model training and/or pre-processing. The script emits the prediction labels. The output of the script can be multi-dimensional. It works similarly in regression and classification scenarios.\n",
     "\n",
-    "Prior to using this notebook one needs to [create the database schema](setup_db.ipynb).\n"
+    "To communicate with the Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "### Access configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e0da0339-bedf-4433-be03-921650f3837b",
+   "execution_count": null,
+   "id": "ca67bb9a-cb0d-4703-bfb3-6536b39be800",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "from dataclasses import dataclass\n",
-    "\n",
-    "@dataclass\n",
-    "class SandboxConfig:\n",
-    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "    HOST_PORT = \"8888\"\n",
-    "\n",
-    "    @property\n",
-    "    def EXTERNAL_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
-    "\n",
-    "    USER = \"sys\"\n",
-    "    PASSWORD = \"exasol\"\n",
-    "    BUCKETFS_PORT = \"6666\"\n",
-    "    BUCKETFS_USER = \"w\"\n",
-    "    BUCKETFS_PASSWORD = \"write\"\n",
-    "    BUCKETFS_USE_HTTPS = False\n",
-    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "    BUCKETFS_BUCKET = \"default\"\n",
-    "\n",
-    "    @property\n",
-    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_URL_PREFIX(self):\n",
-    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_PATH(self):\n",
-    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
-    "\n",
-    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "    UDF_RELEASE= \"20190116\"\n",
-    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "    SCHEMA = \"IDA\"\n",
-    "\n",
-    "    @property\n",
-    "    def SCRIPT_LANGUAGES(self):\n",
-    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
-    "\n",
-    "    @property\n",
-    "    def connection_params(self):\n",
-    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
-    "\n",
-    "    @property\n",
-    "    def params(self):\n",
-    "        return {\n",
-    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
-    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
-    "            \"schema\": self.SCHEMA,\n",
-    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
-    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
-    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
-    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
-    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
-    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
-    "        }\n",
-    "\n",
-    "conf = SandboxConfig()"
+    "%run ../access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f089728-cc11-4a3a-a7bf-f5a49e53a856",
+   "metadata": {},
+   "source": [
+    "## Create UDF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1c74dbb1-e40b-427e-9140-fc33ded4798e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating prediction script took: 106.19ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import textwrap\n",
     "import pyexasol\n",
@@ -110,7 +56,7 @@
     "# Create script to test the model\n",
     "sql = textwrap.dedent(\"\"\"\\\n",
     "CREATE OR REPLACE PYTHON3 SET SCRIPT\n",
-    "{schema!i}.SKLEARN_PREDICT(...)\n",
+    "{schema!q}.SKLEARN_PREDICT(...)\n",
     "EMITS(...) AS\n",
     "\n",
     "# Generic scikit-learn predictor that runs a prediction for a data batch.\n",
@@ -145,11 +91,11 @@
     "            break\n",
     "\n",
     "        # Call the model to get the predictions. Omit the first column in the input\n",
-    "        # which holds the sample ids.\n",
+    "        # which holds the sample IDs.\n",
     "        df_features = X_pred.drop(X_pred.columns[0], axis=1)\n",
     "        y_pred = model.predict(df_features)\n",
     "\n",
-    "        # Combine predictions with the sample ids.\n",
+    "        # Combine predictions with the sample IDs.\n",
     "        df_rowid = X_pred[X_pred.columns[0]].reset_index(drop=True)\n",
     "        df_pred = pd.concat((df_rowid, pd.DataFrame(y_pred)), axis=1)\n",
     "\n",
@@ -158,8 +104,9 @@
     "/\n",
     "\"\"\")\n",
     "\n",
-    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
-    "    conn.execute(query=sql, query_params=conf.params)\n",
+    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
+    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "    conn.execute(query=sql, query_params={'schema': sb_config.SCHEMA})\n",
     "\n",
     "print(f\"Creating prediction script took: {stopwatch}\")"
    ]
