--- a/doc/tutorials/sklearn/sklearn_train_abalone.ipynb
+++ b/doc/tutorials/sklearn/sklearn_train_abalone.ipynb
@@ -5,89 +5,34 @@
    "id": "289d2a8c-953d-46e5-8c73-ad810c29b20f",
    "metadata": {},
    "source": [
-    "In this notebook we will train a simple regression model for predicting the age of an abalone from its physical measurements and sex.You can find more information about the problem domain <a href=\"https://archive.ics.uci.edu/dataset/1/abalone\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
+    "# Training Regression Model\n",
+    "\n",
+    "In this notebook, we will train a simple regression model for predicting the age of an abalone from its physical measurements and sex.You can find more information about the problem domain <a href=\"https://archive.ics.uci.edu/dataset/1/abalone\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
     "\n",
     "We will train the model in this notebook using <a href=\"https://scikit-learn.org/stable/\" target=\"_blank\" rel=\"noopener\">`scikit-learn`</a>, on the training data we are going to export from the database.\n",
     "\n",
-    "To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "To execute queries and load data from the Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
-    "1. [Create the database schema](../setup_db.ipynb).\n",
-    "2. [Load the Abalone data](../data/data_abalone.ipynb)."
+    "## Prerequisites\n",
+    "\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
+    "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
+    "2. [Load the Abalone data](../data/data_abalone.ipynb).\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "### Access configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fa6c628f-853e-4850-8bab-46f7f645856e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Move this to a separate configuration notebook. Here we just need to load this configuration from a store.\n",
-    "from dataclasses import dataclass\n",
-    "\n",
-    "@dataclass\n",
-    "class SandboxConfig:\n",
-    "    EXTERNAL_HOST_NAME = \"192.168.124.93\"\n",
-    "    HOST_PORT = \"8888\"\n",
-    "\n",
-    "    @property\n",
-    "    def EXTERNAL_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.HOST_PORT}\"\"\"\n",
-    "\n",
-    "    USER = \"sys\"\n",
-    "    PASSWORD = \"exasol\"\n",
-    "    BUCKETFS_PORT = \"6666\"\n",
-    "    BUCKETFS_USER = \"w\"\n",
-    "    BUCKETFS_PASSWORD = \"write\"\n",
-    "    BUCKETFS_USE_HTTPS = False\n",
-    "    BUCKETFS_SERVICE = \"bfsdefault\"\n",
-    "    BUCKETFS_BUCKET = \"default\"\n",
-    "\n",
-    "    @property\n",
-    "    def EXTERNAL_BUCKETFS_HOST(self):\n",
-    "        return f\"\"\"{self.EXTERNAL_HOST_NAME}:{self.BUCKETFS_PORT}\"\"\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_URL_PREFIX(self):\n",
-    "        return \"https://\" if self.BUCKETFS_USE_HTTPS else \"http://\"\n",
-    "\n",
-    "    @property\n",
-    "    def BUCKETFS_PATH(self):\n",
-    "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
-    "\n",
-    "    SCRIPT_LANGUAGE_NAME = \"PYTHON3_60\"\n",
-    "    UDF_FLAVOR = \"python3-ds-EXASOL-6.0.0\"\n",
-    "    UDF_RELEASE= \"20190116\"\n",
-    "    UDF_CLIENT = \"exaudfclient\" # or for newer versions of the flavor exaudfclient_py3\n",
-    "    SCHEMA = \"IDA\"\n",
-    "\n",
-    "    @property\n",
-    "    def SCRIPT_LANGUAGES(self):\n",
-    "        return f\"\"\"{self.SCRIPT_LANGUAGE_NAME}=localzmq+protobuf:///{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}?lang=python#buckets/{self.BUCKETFS_SERVICE}/\n",
-    "            {self.BUCKETFS_BUCKET}/{self.UDF_FLAVOR}/exaudf/{self.UDF_CLIENT}\"\"\";\n",
-    "\n",
-    "    @property\n",
-    "    def connection_params(self):\n",
-    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
-    "\n",
-    "    @property\n",
-    "    def params(self):\n",
-    "        return {\n",
-    "            \"script_languages\": self.SCRIPT_LANGUAGES,\n",
-    "            \"script_language_name\": self.SCRIPT_LANGUAGE_NAME,\n",
-    "            \"schema\": self.SCHEMA,\n",
-    "            \"BUCKETFS_PORT\": self.BUCKETFS_PORT,\n",
-    "            \"BUCKETFS_USER\": self.BUCKETFS_USER,\n",
-    "            \"BUCKETFS_PASSWORD\": self.BUCKETFS_PASSWORD,\n",
-    "            \"BUCKETFS_USE_HTTPS\": self.BUCKETFS_USE_HTTPS,\n",
-    "            \"BUCKETFS_BUCKET\": self.BUCKETFS_BUCKET,\n",
-    "            \"BUCKETFS_PATH\": self.BUCKETFS_PATH\n",
-    "        }\n",
-    "\n",
-    "conf = SandboxConfig()"
+    "%run ../access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
    ]
   },
   {
@@ -95,23 +40,17 @@
    "id": "b089a9b5-89b1-45a9-925d-521945ae89b7",
    "metadata": {},
    "source": [
-    "First we will export data into a pandas DataFrame and split it into training and validation sets."
+    "## Load data\n",
+    "\n",
+    "First, we will export data into a pandas DataFrame and split it into training and validation sets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "68be5d5a-ebcc-4fb4-829f-29a5442579d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading the data took: 1.27s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyexasol\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -119,8 +58,9 @@
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(conf.SCHEMA, 'ABALONE_TRAIN'))\n",
+    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
+    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'ABALONE_TRAIN'))\n",
     "\n",
     "X, y = df.drop(columns='RINGS'), df['RINGS']\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)\n",
@@ -133,32 +73,17 @@
    "id": "db4e36c7-06aa-4c2f-bf46-10b328cee623",
    "metadata": {},
    "source": [
-    "Let's look at the features. We will first check what physical measurements have predictive power. For that we will compute mutual information between the measurements' input columns and the target."
+    "## Analyze data\n",
+    "\n",
+    "Let's look at the features. We will first check what physical measurements have predictive power. For that, we will compute mutual information between the measurements' input columns and the target."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3bc3e231-b8fe-4498-9393-f65ecbac618e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'LENGTH': 0.3777307983714149,\n",
-       " 'DIAMETER': 0.4130225409481696,\n",
-       " 'HEIGHT': 0.3730705618531607,\n",
-       " 'WHOLE_WEIGHT': 0.3839492388004473,\n",
-       " 'SHUCKED_WEIGHT': 0.33404766440572065,\n",
-       " 'VISCERA_WEIGHT': 0.35472141609994523,\n",
-       " 'SHELL_WEIGHT': 0.4472509397786135}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_selection import mutual_info_regression\n",
     "\n",
@@ -177,21 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "165e9d98-888e-473c-8d7a-1f304364b5bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5467010907188578e-126"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_selection import f_classif\n",
     "\n",
@@ -203,23 +117,17 @@
    "id": "e7e3cac4-8b4d-4423-8e7b-2ded0e8c77e8",
    "metadata": {},
    "source": [
+    "## Train model\n",
+    "\n",
     "Let's make a pipeline. We will use all features in the input. We will do One Hot Encoding of the SEX column and normalize all others, including the target. Let's use the Support Vector Machine as the regression model. We will drop the column names in the inputs, as they will not be available in the prediction UDF."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4feb0d95-81f8-4b93-8012-a3f39ac37f88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training of the model took: 168.23ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer, TransformedTargetRegressor\n",
@@ -252,25 +160,17 @@
    "id": "5b81bf25-ef8c-4e2d-9c1b-1ef9e1cbed20",
    "metadata": {},
    "source": [
+    "## Evaluate model\n",
+    "\n",
     "Let's see what prediction performance we've got, printing some regression metrics."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "061744b4-c401-4b79-914f-d3d3ba3aad8f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean absolute error: 1.3993917946085437\n",
-      "Mean squared error: 4.266767837896115\n",
-      "Explained variance: 0.5731816112246741\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import explained_variance_score, mean_absolute_error, mean_squared_error\n",
     "\n",
@@ -286,23 +186,17 @@
    "id": "af6fd07e-5175-4767-a5d0-339d42afa135",
    "metadata": {},
    "source": [
-    "Now, let's upload the model into the BucketFS, so that it can be used for making predictions in SQL queries. To communicate with BucketFS we will be using the <a href=\"https://exasol.github.io/bucketfs-python/\" target=\"_blank\" rel=\"noopener\">`bucketfs-python`</a> module. "
+    "## Upload model into BucketFS\n",
+    "\n",
+    "Now, let's upload the model into the BucketFS so that it can be used for making predictions in SQL queries. To communicate with BucketFS we will be using the <a href=\"https://exasol.github.io/bucketfs-python/\" target=\"_blank\" rel=\"noopener\">`bucketfs-python`</a> module. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f61810f9-3d9e-4e1a-aca3-81cf976540d3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Uploading the model took: 605.55ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "from exasol.bucketfs import Service\n",
@@ -310,16 +204,17 @@
     "MODEL_FILE = 'abalone_svm_model.pkl'\n",
     "\n",
     "# Setup the connection parameters.\n",
-    "buckfs_url = f'{conf.BUCKETFS_URL_PREFIX}{conf.EXTERNAL_BUCKETFS_HOST}'\n",
-    "buckfs_credentials = {conf.BUCKETFS_BUCKET: {'username': conf.BUCKETFS_USER, 'password': conf.BUCKETFS_PASSWORD}}\n",
+    "buckfs_url_prefix = 'https' if sb_config.BUCKETFS_USE_HTTPS == 'True' else 'http'\n",
+    "buckfs_url = f'{buckfs_url_prefix}://{sb_config.EXTERNAL_HOST_NAME}:{sb_config.BUCKETFS_PORT}'\n",
+    "buckfs_credentials = {sb_config.BUCKETFS_BUCKET: {'username': sb_config.BUCKETFS_USER, 'password': sb_config.BUCKETFS_PASSWORD}}\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
     "# Connect to the BucketFS service and navigate to the bucket of choice.\n",
     "bucketfs = Service(buckfs_url, buckfs_credentials)\n",
-    "bucket = bucketfs[conf.BUCKETFS_BUCKET]\n",
+    "bucket = bucketfs[sb_config.BUCKETFS_BUCKET]\n",
     "\n",
-    "# Serialize model into a byte-array and upload it to the BucketFS, \n",
+    "# Serialize the model into a byte-array and upload it to the BucketFS, \n",
     "# where it will be saved in the file with the specified name.\n",
     "bucket.upload(MODEL_FILE, pickle.dumps(model))\n",
     "\n",
