Refactoring of the transformer notebooks

--- a/doc/tutorials/transformer/zero_shot_classification.ipynb
+++ b/doc/tutorials/transformer/zero_shot_classification.ipynb
@@ -17,59 +17,31 @@
     "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
-    "## Set up"
+    "## Set up\n",
+    "\n",
+    "### Access configuration"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5c3c1e2-cd6d-4fa7-b992-01b4099b0a72",
+   "id": "9701e026-f252-496e-87cb-8b04f46443c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import UserDict\n",
-    "\n",
-    "class Secrets(UserDict):\n",
-    "    \"\"\"This class mimics the Secret Store we will start using soon.\"\"\"\n",
-    "\n",
-    "    def save(self, key: str, value: str) -> \"Secrets\":\n",
-    "        self[key] = value\n",
-    "        return self\n",
-    "\n",
-    "def get_value_as_attribute(self, key):\n",
-    "    val = self.get(key)\n",
-    "    if val is None:\n",
-    "        raise AttributeError(f'{key} value is not defined')\n",
-    "    return val\n",
-    "\n",
-    "Secrets.__getattr__ = get_value_as_attribute\n",
-    "\n",
-    "# For now just hardcode the configuration.\n",
-    "sb_config = Secrets({\n",
-    "    'EXTERNAL_HOST_NAME': '192.168.124.93',\n",
-    "    'HOST_PORT': '8888',\n",
-    "    'USER': 'sys',\n",
-    "    'PASSWORD': 'exasol',\n",
-    "    'BUCKETFS_PORT': '6666',\n",
-    "    'BUCKETFS_USER': 'w',\n",
-    "    'BUCKETFS_PASSWORD': 'write',\n",
-    "    'BUCKETFS_USE_HTTPS': 'False',\n",
-    "    'BUCKETFS_SERVICE': 'bfsdefault',\n",
-    "    'BUCKETFS_BUCKET': 'default',\n",
-    "    'SCRIPT_LANGUAGE_NAME': 'PYTHON3_60',\n",
-    "    'UDF_FLAVOR': 'python3-ds-EXASOL-6.0.0',\n",
-    "    'UDF_RELEASE': '20190116',\n",
-    "    'UDF_CLIENT': 'exaudfclient_py3',\n",
-    "    'SCHEMA': 'IDA',\n",
-    "    'TE_TOKEN': '',\n",
-    "    'TE_TOKEN_CONN': '',\n",
-    "    'TE_BFS_CONN': 'MyBFSConn',\n",
-    "    'TE_BFS_DIR': 'my_storage',\n",
-    "    'TE_MODELS_BFS_DIR': 'models',\n",
-    "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
-    "})\n",
-    "\n",
+    "%run ../access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fed6b82b-911b-4089-b31c-8fcfd888af69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
+    "\n",
     "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
     "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
