--- a/doc/tutorials/transformer/te_init.ipynb
+++ b/doc/tutorials/transformer/te_init.ipynb
@@ -16,54 +16,29 @@
     "Prior to using this notebook one needs to complete the following steps:\n",
     "1. [Configure the sandbox](../sandbox_config.ipynb).\n",
     "\n",
-    "## Set up"
+    "## Set up\n",
+    "\n",
+    "### Access configuration"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7433e5e3-5258-4773-b202-7aa1b05303ef",
+   "id": "a8068d04-ef01-443a-abb5-2b0987521b1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: start using the secret store.\n",
-    "\n",
-    "from collections import UserDict\n",
-    "\n",
-    "class Secrets(UserDict):\n",
-    "    \"\"\"This class mimics the Secret Store we will start using soon.\"\"\"\n",
-    "\n",
-    "    def save(self, key: str, value: str) -> \"Secrets\":\n",
-    "        self[key] = value\n",
-    "        return self\n",
-    "\n",
-    "def get_value_as_attribute(self, key):\n",
-    "    val = self.get(key)\n",
-    "    if val is None:\n",
-    "        raise AttributeError(f'{key} value is not defined')\n",
-    "    return val\n",
-    "\n",
-    "Secrets.__getattr__ = get_value_as_attribute\n",
-    "\n",
-    "# For now just hardcode the configuration.\n",
-    "sb_config = Secrets({    \n",
-    "    'EXTERNAL_HOST_NAME': '192.168.124.93',\n",
-    "    'HOST_PORT': '8888',\n",
-    "    'USER': 'sys',\n",
-    "    'PASSWORD': 'exasol',\n",
-    "    'BUCKETFS_PORT': '6666',\n",
-    "    'BUCKETFS_USER': 'w',\n",
-    "    'BUCKETFS_PASSWORD': 'write',\n",
-    "    'BUCKETFS_USE_HTTPS': 'False',\n",
-    "    'BUCKETFS_SERVICE': 'bfsdefault',\n",
-    "    'BUCKETFS_BUCKET': 'default',\n",
-    "    'SCRIPT_LANGUAGE_NAME': 'PYTHON3_60',\n",
-    "    'UDF_FLAVOR': 'python3-ds-EXASOL-6.0.0',\n",
-    "    'UDF_RELEASE': '20190116',\n",
-    "    'UDF_CLIENT': 'exaudfclient_py3',\n",
-    "    'SCHEMA': 'IDA'\n",
-    "})\n",
-    "\n",
+    "%run ../access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afbaf706-cc3b-498d-8e7a-3e866ac439f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\""
    ]
   },
@@ -78,14 +53,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bcaef63-06a3-40c1-aaa2-552d78c77125",
+   "id": "013f5167-f1e3-470c-b0c7-00580b9cd98e",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "\n",
     "# Huggingface token required for downloading private models.\n",
-    "sb_config.save('TE_TOKEN', '')\n",
+    "sb_config.save('TE_TOKEN', '-')\n",
     "\n",
     "# Name of the connection encapsulating the Huggingface token. Leave it empty if the token is not used.\n",
     "sb_config.save('TE_TOKEN_CONN', '')\n",
@@ -99,7 +74,7 @@
     "# We will store all models in this sub-directory at BucketFS.\n",
     "sb_config.save('TE_MODELS_BFS_DIR', 'models')\n",
     "    \n",
-    "# We will save cached model in this sub-directory relative to the current directory on the local machine.\n",
+    "# We will save a cached model in this sub-directory relative to the current directory on the local machine.\n",
     "sb_config.save('TE_MODELS_CACHE_DIR', 'models_cache')"
    ]
   },
